--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <p><a href="https://travis-ci.org/popcorn-official/popcorn-api"><img src="https://travis-ci.org/popcorn-official/popcorn-api.svg?branch=master" alt="Build Status"></a>
 <a href="https://david-dm.org/popcorn-official/popcorn-api"><img src="https://david-dm.org/popcorn-official/popcorn-api.svg" alt="Dependency Status"></a>
 <a href="https://david-dm.org/popcorn-official/popcorn-api#info=devDependencies"><img src="https://david-dm.org/popcorn-official/popcorn-api/dev-status.svg" alt="devDependency Status"></a>
-<a href="https://chrisalderson.github.io/source.html"><img src="https://chrisalderson.github.io/badge.svg" alt="document"></a></p>
+<a href="https://popcorn-official.github.io/popcorn-api/source.html"><img src="https://popcorn-official.github.io/popcorn-api/badge.svg" alt="document"></a></p>
 <p>Popcorn API is developed to make it easier for anyone to create their own version of <a href="http://popcorntime.sh">Popcorn Time</a>. It contains:</p>
 <ul>
 <li>Metadata about movies (taken from Trakt).</li>
@@ -106,7 +106,7 @@
 <li>Build the ES5 code with <code>gulp build</code>.</li>
 </ol>
 <h1 id="manual">Manual</h1>
-<p>Checkout the <a href="https://chrisalderson.github.io/manual/index.html">manual</a> to find out more about this project.</p>
+<p>Checkout the <a href="https://popcorn-official.github.io/popcorn-api/">manual</a> to find out more about this project.</p>
 <h1 id="license">License</h1>
 <p>MIT License</p>
 <p>Copyright (c) 2016 - Popcorn API - Released under the <a href="LICENSE.txt">MIT license</a>.</p>
