--- a/manual/overview.html
+++ b/manual/overview.html
@@ -138,7 +138,7 @@
 <p><a href="https://travis-ci.org/popcorn-official/popcorn-api"><img src="https://travis-ci.org/popcorn-official/popcorn-api.svg?branch=master" alt="Build Status"></a>
 <a href="https://david-dm.org/popcorn-official/popcorn-api"><img src="https://david-dm.org/popcorn-official/popcorn-api.svg" alt="Dependency Status"></a>
 <a href="https://david-dm.org/popcorn-official/popcorn-api#info=devDependencies"><img src="https://david-dm.org/popcorn-official/popcorn-api/dev-status.svg" alt="devDependency Status"></a>
-<a href="https://chrisalderson.github.io/source.html"><img src="https://chrisalderson.github.io/badge.svg" alt="document"></a></p>
+<a href="https://popcorn-official.github.io/popcorn-api/source.html"><img src="https://popcorn-official.github.io/popcorn-api/badge.svg" alt="document"></a></p>
 <p>Popcorn API is developed to make it easier for anyone to create their own version of <a href="http://popcorntime.sh">Popcorn Time</a>. It contains:</p>
 <ul>
 <li>Metadata about movies (taken from Trakt).</li>
@@ -149,7 +149,7 @@
 <li>Add content manually through the CLI.</li>
 </ul>
 <h1 id="documentation">Documentation</h1>
-<p>Documentation for the code can be generated with the command <code>npm run docs</code>. This will automatically generate the documentation which will be located in the <code>docs</code> directory. The <code>index.html</code> page will be the starting point. You can also view the documentation online right <a href="https://chrisalderson.github.io/">here</a>.</p>
+<p>Documentation for the code can be generated with the command <code>npm run docs</code>. This will automatically generate the documentation which will be located in the <code>docs</code> directory. The <code>index.html</code> page will be the starting point. You can also view the documentation online right <a href="https://popcorn-official.github.io/popcorn-api/">here</a>.</p>
 <h1 id="folder-structure">Folder structure</h1>
 <p>The API has the following folder structure.</p>
 <pre><code><code class="source-code prettyprint">.
