--- a/manual/overview.html
+++ b/manual/overview.html
@@ -149,7 +149,7 @@
 <li>Add content manually through the CLI.</li>
 </ul>
 <h1 id="documentation">Documentation</h1>
-<p>Documentation for the code can be generated with the command <code>npm run docs</code>. This will automatically generate the documentation which will be located in the <code>docs</code> directory. The <code>index.html</code> page will be the starting point. You can also view the documentation online right <a href="https://popcorn-official.github.io/popcorn-api/">here</a>.</p>
+<p>Documentation for the code can be generated with the command <code>npm run docs</code>. This will automatically generate the documentation which will be located in the <code>docs</code> directory. The <code>index.html</code> page will be the starting point. You can also view the documentation online right <a href="https://popcorn-official.github.io/popcorn-api/manual/index.html">here</a>.</p>
 <h1 id="folder-structure">Folder structure</h1>
 <p>The API has the following folder structure.</p>
 <pre><code><code class="source-code prettyprint">.
